--- a/sign-in.css
+++ b/sign-in.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../image/starry-sky.jpg);
+    background-image: url(image/starry-sky.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     
@@ -26,7 +26,7 @@ body{
     font-size: 13px;
     margin: 10px 0;
     padding:5px;
-    color: #fff !important;
+    color:  #fff !important;
     background-color: rgba(255, 255, 255, 0.1);
     border: none;
     outline: none;
